--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="login_button">Log In</string>
+
+    <string name="error_email_required">Email is required</string>
+    <string name="error_email_invalid">Email format is invalid</string>
+    <string name="error_password_required">Password is required</string>
+    <string name="error_unexpected">An unexpected error occurred</string>
+
+    <string name="error_user_not_found">No user found with this email</string>
+    <string name="error_invalid_credentials">Incorrect email or password</string>
+    <string name="error_user_already_exists">An account with this email already exists</string>
+    <string name="error_network">Network error. Please check your connection</string>
+
 </resources>
