--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="error_network">Network error. Please check your connection</string>
 
     <string name="camera_permission_denied">Camera permission denied</string>
-
+    <string name="logout_button_text">Log out</string>
+    <string name="read_info_title">Read Information</string>
+    <string name="edittext_hint">Type here</string>
 
 </resources>
